--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.15.0
   firebase_auth: ^5.6.1
   cloud_firestore: ^5.6.10
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
